--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1306,7 +1306,7 @@ input, select, textarea {
 	}
 
 	body {
-		background-image: url("images/aku.jpg");
+		background-image: url("images/yangini4.jpg");
 		background-repeat: repeat, no-repeat;
 		background-size: auto, 100% 100%;
 		background-attachment: fixed;
